fixes #113 and #120 regarding color schemes of UI 1. Text colour in the orange text box can make it hard to read messages. 2. Suggestion on colour scheme used.

--- a/src/main/resources/view/NusTheme.css
+++ b/src/main/resources/view/NusTheme.css
@@ -150,7 +150,7 @@
     -fx-background-color: transparent;
     -fx-font-family: "Courier New";
     -fx-font-size: 13pt;
-    -fx-text-fill: white;
+    -fx-text-fill: black;
 }
 
 .result-display .label {
